changed screen media query prevent text color changing

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -154,7 +154,7 @@ footer {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        color:#Df744a;
+        color:#fEDCD2;
       }
 }
 
